# More-Informative-Console

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ExtraInfoEntry.cpp  ExtraInfoEntry.h  MIC_Scaleform.cpp  MIC_Scaleform.h  MoreInformativeConsole.aps  MoreInformativeConsole.vcxproj  PCH.h  README.md  Util.cpp  Util.h  exports.def  globals.cpp  globals.h  main.cpp  resource.h  vcpkg.json
BSExtraData/: BSExtraData.cpp  BSExtraData.h  ExtraContainerChanges.cpp  ExtraContainerChanges.h  ExtraEnableStateParent.cpp  ExtraEnableStateParent.h  ExtraLock.cpp  ExtraLock.h  ExtraOwnership.cpp  ExtraOwnership.h  ExtraTeleport.cpp  ExtraTeleport.h
Scaleform/: MICScaleform_GetExtraData.cpp  MICScaleform_GetExtraData.h  MICScaleform_GetIniOptions.cpp  MICScaleform_GetIniOptions.h  MICScaleform_GetReferenceInfo.cpp  MICScaleform_GetReferenceInfo.h  MICScaleform_Log.cpp  MICScaleform_RetrieveExtraData.cpp  MICScaleform_RetrieveExtraData.h
TESForms/: BGSMusicTrack.cpp  BGSMusicTrack.h  BGSTextureSet.cpp  BGSTextureSet.h  EffectSetting.cpp  EffectSetting.h  MagicItem.cpp  MagicItem.h  SpellItem.cpp  SpellItem.h  TESAmmo.cpp  TESAmmo.h  TESForm.cpp  TESForm.h  TESModel.cpp  TESModel.h  TESModelTextureSwap.cpp  TESModelTextureSwap.h  TESNPC.cpp  TESNPC.h  TESObjectARMA.cpp  TESObjectARMA.h  TESObjectARMO.cpp  TESObjectARMO.h  TESObjectCELL.cpp  TESObjectCONT.cpp  TESObjectCONT.h  TESObjectREFR.cpp  TESObjectREFR.h  TESObjectWEAP.cpp  TESObjectWEAP.h  TESRace.cpp  TESRace.h
Util/: FilePathUtil.cpp  FilePathUtil.h  GeneralUtil.cpp  GeneralUtil.h  NameUtil.cpp  NameUtil.h  ScaleformUtil.cpp  ScaleformUtil.h
cmake/: Version.h.in
release/: MoreInformativeConsole.ini  MoreInformativeConsoleTranslations.ini
src/: EditorIDCache.cpp  EditorIDCache.h  ExtraInfoEntry.cpp  ExtraInfoEntry.h  FormExtraInfoCache.cpp  FormExtraInfoCache.h  MIC_Scaleform.cpp  MIC_Scaleform.h  PCH.h  TranslationCache.cpp  TranslationCache.h  globals.cpp  globals.h  main.cpp
src/BSExtraData/: BSExtraData.cpp  BSExtraData.h  ExtraAliasInstanceArray.cpp  ExtraAliasInstanceArray.h  ExtraContainerChanges.cpp  ExtraContainerChanges.h  ExtraEnableStateParent.cpp  ExtraEnableStateParent.h  ExtraLocation.cpp  ExtraLocation.h  ExtraLock.cpp  ExtraOwnership.cpp  ExtraRegionList.cpp  ExtraRegionList.h  ExtraTeleport.cpp
src/Scaleform/: MICScaleform_GetExtraData.cpp  MICScaleform_GetExtraData.h  MICScaleform_GetIniOptions.cpp  MICScaleform_GetQuestData.cpp  MICScaleform_GetQuestData.h  MICScaleform_GetReferenceInfo.cpp  MICScaleform_GetReferenceInfo.h  MICScaleform_Log.cpp  MICScaleform_Log.h  MICScaleform_RetrieveExtraData.cpp  MICScaleform_RetrieveExtraData.h
src/TESForms/: BGSLocation.cpp  BGSLocation.h  BGSMusicTrack.cpp  BGSTextureSet.cpp  EffectSetting.cpp  EffectSetting.h  EnchantmentItem.cpp  EnchantmentItem.h  MagicItem.cpp  MagicItem.h  SpellItem.cpp  TESAmmo.cpp  TESAmmo.h  TESForm.cpp  TESForm.h  TESGlobal.cpp  TESGlobal.h  TESModel.cpp  TESModel.h  TESModelTextureSwap.cpp  TESModelTextureSwap.h  TESNPC.cpp  TESNPC.h  TESObjectARMA.cpp  TESObjectARMA.h  TESObjectARMO.cpp  TESObjectARMO.h  TESObjectCELL.cpp  TESObjectCELL.h  TESObjectCONT.cpp  TESObjectCONT.h  TESObjectREFR.cpp  TESObjectREFR.h  TESObjectWEAP.cpp  TESObjectWEAP.h  TESQuest.cpp  TESQuest.h  TESRace.cpp  TESRace.h
src/Util/: FilePathUtil.cpp  GeneralUtil.cpp  GeneralUtil.h  NameUtil.cpp  NameUtil.h  ScaleformUtil.cpp  ScriptUtil.cpp  ScriptUtil.h
